--- a/TP1/Exercice5/style.css
+++ b/TP1/Exercice5/style.css
@@ -1,11 +1,11 @@
 .column {
-    float: left;
-    width: 25%;
+	vertical-align: middle;
+	text-align:center;
+	float: left;
+	width: 25%;
 }
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+img {
+  max-width:100%;
+  height:auto;
 }
